Fix board uneven animation bug

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -174,11 +174,8 @@
     opacity: 1;
   }
 
-  99% {
-    opacity: 0;
-  }
-
   100% {
+    opacity: 0;
     display: none;
   }
 }
